--- a/fashion-app/frontend/.gitignore
+++ b/fashion-app/frontend/.gitignore
@@ -1,4 +1,11 @@
-node_modules/
-build/
+# dependencies
+/node_modules
+/dist
+/build
+
+# misc
+.DS_Store
 .env
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
