--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:production": "REACT_APP_ENV=production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "env:check": "echo $REACT_APP_API_BASE_URL",
+    "preview": "npx serve -s build",
+    "netlify:build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
