--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = "build/"
 
 [build.environment]
