--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build", 
     "build:production": "REACT_APP_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -27,13 +27,17 @@
     "netlify:build": "npm run build",
     
     "switch:ai": "node scripts/switch-ui.js ai",
-    "switch:designer": "node scripts/switch-ui.js designer",
+    "switch:designer": "node scripts/switch-ui.js designer", 
     "dev:ai": "npm run switch:ai && npm start",
     "dev:designer": "npm run switch:designer && npm start",
     "build:ai": "npm run switch:ai && npm run build",
     "build:designer": "npm run switch:designer && npm run build",
     "check:ui": "node scripts/check-ui.js",
-    "git:add-shared": "git add src/services/ src/contexts/ src/utils/ src/hooks/",
+    
+    "git:add-core": "git add package.json src/App.jsx public/ *.config.js netlify.toml .gitignore",
+    "git:add-shared": "git add src/services/ src/contexts/ src/utils/ src/hooks/ src/components/Common/",
+    "git:add-docs": "git add README.md docs/",
+    "git:add-all-shared": "npm run git:add-core && npm run git:add-shared && npm run git:add-docs",
     "git:add-ai": "git add src/components/Auth-AI/ src/pages/",
     "git:add-designer": "git add src/components/Auth-Designer/ src/pages/"
   },
