fix: add build-safe UI resolution for Netlify deployment
COMPLETED:
✅ Create ensure-ui.js script to copy selected UI components during build process
✅ Add prebuild hook to ensure Auth directory exists before React build starts
✅ Implement environment-aware UI selection with Designer as default fallback
✅ Resolve Netlify deployment failures caused by missing Auth symlink directory

TESTING:
🧪 Build process now succeeds locally with npm run build after ensure-ui script
🧪 Script handles missing Auth directory and copies appropriate UI components
🧪 Environment variable UI_TYPE allows branch-specific UI selection in production

NEXT:
🎯 Deploy to Netlify and verify build succeeds with copied Auth-Designer components
🎯 Test branch-specific UI deployment by creating ai-ui branch with UI_TYPE=ai
🎯 Add CI/CD integration tests to verify both UI variants build successfully

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,20 @@
 [build]
   base = "."
-  command = "npm ci --include=dev && npm run build"
+  command = "npm ci --include=dev && npm run switch:designer && npm run build"
   publish = "build/"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  # ✅ NEW: Environment variable to control UI selection
+  UI_TYPE = "designer"
+
+# ✅ NEW: Context-specific builds for different UIs
+[context.production]
+  command = "npm ci --include=dev && npm run switch:designer && npm run build"
+
+[context.ai-branch]
+  command = "npm ci --include=dev && npm run switch:ai && npm run build"
 
 # Redirect all routes to index.html for client-side routing
 [[redirects]]
