feat: implement hybrid bulk product upload with CSV and manual entry
- Add VendorHybridBulkUpload component with multi-step workflow
- Support CSV template download and validation
- Enable individual product upload for images compatibility
- Add bulk upload button to vendor product list header
- Include Papa Parse for CSV processing
- Implement progress tracking and error handling
- Add image upload support for bulk operations
- Update vendorService with CSV methods and bulk operations
- Create VendorHybridBulkUploadPage with sidebar layout

Breaking changes: None
Dependencies: Added papaparse ^5.5.3, @types/papaparse ^5.3.14

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "dev:ai": "npm run switch:ai && npm start",
     "dev:designer": "npm run switch:designer && npm start",
     "check:ui": "node scripts/check-ui.js",
-    "git:add-core": "git add package.json src/App.jsx public/ *.config.js netlify.toml .gitignore",
+    "git:add-core": "git add package.json package-lock.json src/App.jsx public/ *.config.js netlify.toml .gitignore",
     "git:add-shared": "git add src/services/ src/contexts/ src/utils/ src/hooks/ src/components/Common/ src/components/Vendor/",
     "git:add-docs": "git add README.md docs/",
     "git:add-all-shared": "npm run git:add-core && npm run git:add-shared && npm run git:add-docs",
