refactor: implement VendorLayout architecture and optimize vendor portal
BREAKING CHANGES:
- Extract VendorSidebar to shared layout component
- Refactor all vendor pages to content-only pattern
- Centralize sidebar management in VendorLayout

Layout Architecture:
- Add VendorLayout wrapper component for /vendor/* routes
- Remove duplicate sidebar implementations from pages
- Standardize ml-[254px] spacing handling

Authentication & Services:
- Fix vendor login role preservation issues
- Enhance authService response normalization
- Improve token consistency across services
- Add comprehensive debugging for 401 issues

Product Management:
- Implement context-aware ProductCard URLs
- Fix product filtering and status normalization
- Enhance VendorProductListContent simplification
- Update ProductDetailPage layout detection

Code Quality:
- Remove layout duplication across vendor pages
- Clean up import statements and unused components
- Standardize error handling patterns
- Improve development debugging experience

Files modified:
- VendorLayout.jsx, VendorSidebar.jsx (layout extraction)
- All vendor pages (content-only refactor)
- ProductCard.jsx (context-aware routing)
- authService.js, productService.js, vendorService.js (auth fixes)
- AuthContext.jsx (role preservation)
- App.jsx (route structure)

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "dev:ai": "npm run switch:ai && npm start",
     "dev:designer": "npm run switch:designer && npm start",
     "check:ui": "node scripts/check-ui.js",
-    "git:add-core": "git add package.json package-lock.json src/App.jsx public/ *.config.js netlify.toml .gitignore",
-    "git:add-shared": "git add src/services/ src/contexts/ src/utils/ src/hooks/ src/components/Common/ src/components/Vendor/",
+    "git:add-core": "git add package.json package-lock.json src/App.jsx public/ *.config.js netlify.toml .gitignore .env.local .env.example",
+    "git:add-shared": "git add src/services/ src/contexts/ src/utils/ src/hooks/ src/components/Common/ src/components/Vendor/ src/components/Layout/ src/components/Product/",
     "git:add-docs": "git add README.md docs/",
     "git:add-all-shared": "npm run git:add-core && npm run git:add-shared && npm run git:add-docs",
     "git:add-ai": "git add src/components/Auth-AI/ src/pages/",
@@ -59,10 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "## Overview React-based frontend for the Fashion Shopping Platform MVP, covering: - Shopper flows (Auth, Search, Cart/Checkout, Order Tracking) - Vendor flows (Vendor Onboarding, Inventory Management) - Admin flows (User Management, Revenue Reporting)",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
