--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "build:production": "REACT_APP_ENV=production react-scripts build",
     "prebuild": "npm run ensure-ui",
     "prebuild:designer": "npm run switch:designer",
