--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:ci": "CI=true react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "build:production": "REACT_APP_ENV=production react-scripts build",
     "prebuild": "npm run ensure-ui",
