--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
