update package.json to support Node.js v24.3.0 for local and production

--- a/package.json
+++ b/package.json
@@ -83,5 +83,13 @@
         "statements": 75
       }
     }
+  },
+  "engines": {
+    "node": ">=24.0.0",
+    "npm": ">=10.0.0"
+  },
+  "volta": {
+    "node": "24.3.0",
+    "npm": "10.9.2"
   }
 }
