--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.2",
     "lucide-react": "^0.263.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
