--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "axios": "^1.3.2",
+    "axios": "^1.11.0",
     "lucide-react": "^0.263.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.30.1"
   },
