--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.263.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
