--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/papaparse": "^5.3.14",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "tailwindcss": "^3.1.0"
   },
   "scripts": {
@@ -91,7 +91,7 @@
     }
   },
   "engines": {
-    "node": ">=24.0.0",
+    "node": ">=20.0.0",
     "npm": ">=10.0.0"
   },
   "volta": {
