--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.1.0"
+    "tailwindcss": "^3.1.0",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
