feat: increase logo sizes across all components with new asset pipeline
- Generate multiple logo sizes (80px to 400px) using ImageMagick script
- Increase sidebar logos from 40px to 64-80px for better visibility
- Create icon-only and full logo variants with transparent backgrounds
- Add retina @2x versions for high-DPI displays
- Update 15+ components with properly sized logo assets
- Organize assets in public/assets/logos/ directory
- Maintain favicon.svg for auth and admin flows

Co-authored-by: ImageMagick Asset Pipeline <scripts/generate-logo-assets.sh>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "fashion-app-frontend",
+  "name": "faari-frontend",
   "version": "0.1.0",
   "private": true,
+  "description": "Fáàrí - Fashion Marketplace Platform",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
