Sentry prod config
An observability platform for error tracking and performance monitoring

--- a/.env.prod
+++ b/.env.prod
@@ -3,3 +3,7 @@ REACT_APP_API_BASE_URL=https://api.faari.app
 REACT_APP_ENV=production
 REACT_APP_APP_NAME=Faari
 REACT_APP_PAYSTACK_PUBLIC_KEY=pk_live_9da64977c728a9fba082d8909e0604b487c4dc47
+
+# Sentry Configuration
+REACT_APP_SENTRY_DSN=https://31495b99d8cd03bd3e7f22470df593c2@o4510612747976704.ingest.de.sentry.io/4510612750008400
+REACT_APP_SENTRY_ENABLED=true
