--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ REACT_APP_API_BASE_URL=http://localhost:3002
 
 REACT_APP_APP_NAME=Fashion App
 # Note: Copy this file to .env.local and update values as needed
+
+# Sentry Configuration
+REACT_APP_SENTRY_DSN=https://31495b99d8cd03bd3e7f22470df593c2@o4510612747976704.ingest.de.sentry.io/4510612750008400
+REACT_APP_SENTRY_ENABLED=false
