--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Fáàrí - Fashion Marketplace Platform",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sentry/react": "^10.32.1",
     "axios": "^1.11.0",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.263.1",
